Build basic JMX structure for Jconsole, and make compile JDK to 11